@@ -3,6 +3,8 @@ glibc (2.3.6-7) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Optimized libraries should actually be cross-compiled as we don't know the
     CPU that will be used.
+  * Allow the glibc to be cross-compiled for Linux and kFreeBSD.  (Closes:
+    #358771)
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 11 Apr 2006 00:54:26 +0200
 
